# eecs467-diffusion-policy

./: .gitignore  act_train.batch  commands.txt  get_key.sh  move_to_init.py  record.py  requirements.txt  rerun.sh  teleoperate.py  view_dataset.py
lerobot_policy_diffusion_eecs467/: diff_train.batch  pyproject.toml  requirements.txt  resume_train.batch
lerobot_policy_diffusion_eecs467/src/lerobot_policy_diffusion_eecs467/: __init__.py  cond_1dunet.py  configuration_diffusion_eecs467.py  diffusion_utils.py  modeling_diffusion_eecs467.py  processor_diffusion_eecs467.py
